# metric_explorer

./: .env.example  .gitignore  README.md  agent_design_update_prompt.md  docker-compose.yml  metric-drilldown-agent-prd.md  pyproject.toml
.claude/: settings.local.json
.specify/memory/: constitution.md
agent/: requirements.txt
agent/src/: __init__.py  graph.py  state.py
agent/src/memory/: __init__.py  findings_ledger.py  progress_log.py  session_log.py  supabase_rag.py  working_memory.py
agent/src/nodes/: __init__.py  analysis_execution.py  hypothesis_generator.py  memory_dump.py  metric_identification.py  report_generator.py  schema_inference.py
agent/src/prompts/: analysis_system.txt  hypothesis_generation.txt  qa_response.txt  report_template.txt  schema_inference.txt
agent/src/tools/: __init__.py  csv_tools.py  file_tools.py  mcp_client.py
backend/: requirements.txt
backend/migrations/: 001_memory_documents.sql
backend/src/: config.py  main.py
backend/src/api/middleware/: error_handler.py
backend/src/api/routes/: __init__.py  files.py  investigate.py  sessions.py
backend/src/models/: __init__.py  errors.py  schemas.py
backend/src/services/: __init__.py  agent_runner.py  file_handler.py  session_manager.py
frontend/: .eslintrc.js  package.json
frontend/src/: server.js
frontend/src/public/css/: styles.css
frontend/src/public/js/: app.js
frontend/src/routes/: index.js
frontend/src/views/: error.ejs  form.ejs  layout.ejs
shared/: config.py
specs/001-metric-drilldown-mvp/: data-model.md  memory_loop_spec.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-metric-drilldown-mvp/checklists/: requirements.md
specs/001-metric-drilldown-mvp/contracts/: agent-tools.md  api.yaml
